--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,10 +9,23 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "首页.md",
+            "file": "大学/京都大学.md",
             "mode": "source"
           }
-        }
+        },
+        "group": "8b6a1cd012f940df"
+      },
+      {
+        "id": "34ed942eca6db7a3",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "大学/京都大学.md",
+            "mode": "preview"
+          }
+        },
+        "group": "8b6a1cd012f940df"
       }
     ],
     "direction": "vertical"
@@ -68,7 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "首页.md",
+                "file": "大学/京都大学.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -76,6 +89,16 @@
                 "searchQuery": "",
                 "backlinkCollapsed": false,
                 "unlinkedCollapsed": true
+              }
+            }
+          },
+          {
+            "id": "0416d40af8bd62ba",
+            "type": "leaf",
+            "state": {
+              "type": "outline",
+              "state": {
+                "file": "大学/京都大学.md"
               }
             }
           }
@@ -88,12 +111,12 @@
   },
   "active": "8bc34e0e61d8ace3",
   "lastOpenFiles": [
-    "首页.md",
-    "研究/程序语言理论.md",
-    "大学/东京大学.md",
-    "大学/早稻田大学.md",
     "大学/京都大学.md",
     "大学/东京工业大学.md",
+    "大学/东京大学.md",
+    "研究/程序语言理论.md",
+    "首页.md",
+    "大学/早稻田大学.md",
     "东京工业大学.md",
     "测试.md"
   ]
